--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -3,13 +3,12 @@
 <head>
 	<title>LYninG</title>
 	<meta charset="utf-8">
-	<script type="text/javascript" src=""></script>
+	<script type="text/javascript" src="./js/bundle.js"></script>
+	<link type="text/css" href="./css/css.css">
 </head>
 <body>
-
 	<div id="app">
 		<router-view></router-view>
 	</div>
-
 </body>
 </html>
