--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -3,12 +3,11 @@
 <head>
 	<title>LYninG</title>
 	<meta charset="utf-8">
-	<script type="text/javascript" src="./js/bundle.js"></script>
-	<link type="text/css" href="./css/css.css">
 </head>
 <body>
 	<div id="app">
 		<router-view></router-view>
 	</div>
+	<script type="text/javascript" src="./bundle.js"></script>
 </body>
 </html>
